# RAN_Market

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: README.md  pyproject.toml  requirements.txt
backend/scripts/: seed.py
backend/src/: config.py  database.py  main.py  security.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/coming_soon/: models.py  router.py  schemas.py
backend/src/devis/: models.py  router.py  schemas.py  service.py
backend/src/imports/: models.py  router.py  schemas.py  service.py
backend/src/robots/: filters.py  models.py  router.py  schemas.py  service.py
backend/src/shared/: enums.py  exceptions.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_coming_soon.py  test_devis.py  test_imports.py  test_robots.py
frontend/: README.md  index.html  memory_scores.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
src/: App.vue  style.css
src/assets/: main.css
src/composables/: useCatalogueFilters.ts  useDevisForm.ts  useRobotForm.ts  useViewStrategy.ts
src/router/: index.ts
src/services/: api.contracts.ts  auth.service.mock.ts  delay.ts  devis.service.mock.ts  import.service.mock.ts  index.ts  robot.service.mock.ts
src/stores/: auth.store.ts  backoffice.store.ts  devis.store.ts  robots.store.ts
src/types/: devis.types.ts  filters.types.ts  import.types.ts  index.ts  robot.types.ts  user.types.ts
src/utils/: crypto.ts  (+1 more)
(+91 files in other folders)
